Fix switch button z-index in Header.

--- a/src/components/common/Footer/Footer.scss
+++ b/src/components/common/Footer/Footer.scss
@@ -57,10 +57,11 @@
 
   .bottom {
     text-align: center;
-    @include hover-transition;
 
-    .svarog:hover {
-      color: $black-hover;
+    .svarog {
+      @include hover-transition;
+
+      &:hover { color: $black-hover; }
     }
   }
 }
